<resources>
    <string name="app_name">Sporty</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_search">Cerca</string>
    <string name="title_user">Area Privata</string>
    <string name="title_add">Inserisci</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="eta">Età</string>
    <string name="registrazione">REGISTRAZIONE</string>
    <string name="sign_in">Sign in</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="user_image">User Image</string>
    <string name="powered_by_f_c_d_o_p">Powered By F.C.D.O.P</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="aggiungi_una_foto_profilo">Aggiungi una foto profilo</string>
    <string name="tizio_caio">Tizio Caio</string>
    <string name="modifica_immagine_profilo">Modifica Immagine Profilo</string>
    <string name="forgot_password">forgot Password</string>
    <string name="registrati_no_caps">Registrati</string>
    <string name="data">DATA</string>
    <string name="città">CITTÀ</string>
    <string name="fascia_oraria">FASCIA ORARIA</string>
    <string name="calcio">CALCIO</string>
    <string name="tennis">TENNIS</string>
    <string name="basket">BASKET</string>
    <string name="paddle">PADDLE</string>
    <string name="scegli_uno_sport_per_creare_un_annuncio">SCEGLI UNO SPORT PER CREARE UN ANNUNCIO</string>
    <string name="please_select_the_checkbox_before_proceeding">Please Select the checkbox before proceeding</string>
    <string name="modalit">MODALITÀ</string>
    <string name="sport">Sport</string>
    <string name="seleziona_data">SELEZIONA DATA</string>
    <string name="creazione_annuncio">CREAZIONE ANNUNCIO</string>
    <string name="crea_annuncio">CREA ANNUNCIO</string>

    <string-array name="nome">
        <item>Filippo Carletti</item>
        //calcio
        <item>Luca Orlandi</item>
        //tennis
        <item>Lorenzo Donadio</item>
        //paddle
        <item>Andrea Fraschetti</item>
        //basket
    </string-array>

    <string-array name="modalita">
        <item>8</item>
        <item>singolo</item>
        <item>doppio</item>
        <item>5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="citta2">città</string>
    <string name="title_activity_details">Details</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_fav">Salvati</string>
    <string name="annunci_salvati">Annunci Salvati</string>
    <string name="salvati">Salvati</string>

</resources>