<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.app.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.app.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.app.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>