<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_wallpaper"
    tools:context=".Login">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sporty_logo_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_cover_log"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVLog"
        app:layout_constraintStart_toStartOf="@+id/guidelineVLog"
        app:layout_constraintTop_toTopOf="@+id/guidelineLogM">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/box_embed"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_cover"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:counterEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVLog"
        app:layout_constraintStart_toStartOf="@+id/guidelineVLog"
        app:layout_constraintTop_toTopOf="@+id/guidelineLogP"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/box_embed"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonLogin"
        android:layout_width="260dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVLog"
        app:layout_constraintStart_toStartOf="@+id/guidelineVLog"
        app:layout_constraintTop_toTopOf="@+id/guidelineBtnLog">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/white" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"

        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVLog"
        app:layout_constraintStart_toStartOf="@+id/guidelineVLog"
        app:layout_constraintTop_toTopOf="@+id/guidelineSignText" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_f_c_d_o_p"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVLog"
        app:layout_constraintStart_toStartOf="@+id/guidelineVLog"
        app:layout_constraintTop_toTopOf="@+id/guidelineCredit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBtnLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>