<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_match"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/create_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/creazione_annuncio"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/show_dialog"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_title">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/show_dialogT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/seleziona_data"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/create_match_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimarySurface"
            app:cardCornerRadius="20dp"
            app:contentPaddingBottom="40dp"
            app:contentPaddingTop="40dp"
            android:layout_marginTop="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_title">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="2dp"
                android:hint="@string/data"
                android:layout_gravity="center_horizontal"
                android:textColor="?attr/colorSecondaryVariant"
                android:textColorHint="?attr/colorSecondaryVariant"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fascia_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_gravity="center_horizontal"
                android:elevation="3dp"
                android:text="@string/fascia_oraria"
                android:textColor="?attr/colorSecondaryVariant"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fascia_oraria"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginTop="90dp"
                android:background="@drawable/box_text"
                android:elevation="2dp"
                android:ems="10"
                android:popupBackground="@drawable/rounded_corner"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/mod_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:elevation="3dp"
                android:text="@string/modalit"
                android:textColor="?attr/colorSecondaryVariant"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <Spinner
                android:id="@+id/modalita"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginTop="185dp"
                android:background="@drawable/box_text"
                android:elevation="2dp"
                android:ems="10"
                android:popupBackground="@drawable/rounded_corner"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/city_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:elevation="3dp"
                android:text="@string/città"
                android:textColor="?attr/colorSecondaryVariant"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/city_field"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginTop="275dp"
                android:background="@drawable/box_text"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/citta2"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="10dp"
                android:textColorHint="?attr/colorSecondaryVariant"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:layout_marginTop="345dp"
                android:text="INFORMAZIONI AGGIUNTIVE"
                android:textColor="?attr/colorSecondaryVariant"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/info_box"
                android:layout_width="260dp"
                android:layout_height="140dp"
                android:layout_marginTop="385dp"
                android:background="@drawable/box_text"
                android:elevation="2dp"
                android:ems="10"
                android:gravity="top"
                android:hint="Luogo incontro \nInformazioni particolari ..."
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="10dp"
                android:textColor="?attr/colorSecondaryVariant"
                android:textColorHint="?attr/colorSecondaryVariant"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/create_ad"
            android:layout_width="255dp"
            android:layout_height="50dp"
            android:layout_marginTop="710dp"
            android:textSize="14sp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/create_adT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/crea_annuncio"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
